Add some fixes